--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gulp": "^3.9.1",
     "gulp-install": "^0.6.0",
     "gulp-sass": "^3.1.0",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "requirejs": "^2.3.2"
   },
   "devDependencies": {},
   "description": ""
